add paremeter to configure javac feature --enable-preview
Signed-off-by: Olivier Lamy <olamy@apache.org>